[gd_scene load_steps=12 format=3 uid="uid://dxu16hlxqlqed"]

[ext_resource type="PackedScene" uid="uid://cgb5pdwsutpb" path="res://source/Actor/NPCs/Mimi/Mesh_Mimi.tscn" id="1_mp811"]
[ext_resource type="Script" path="res://source/Actor/NPCs/Mimi/Mimi.gd" id="1_oq085"]
[ext_resource type="Script" path="res://source/Actor/NPCs/Mimi/MimiFSM.gd" id="2_wdrqt"]
[ext_resource type="PackedScene" uid="uid://mpkt245hqfmb" path="res://source/User Interface/Camera_Arm.tscn" id="3_fg4t1"]
[ext_resource type="PackedScene" uid="uid://bffwmjigb57rl" path="res://source/User Interface/Progress Bars/ProgressBars.tscn" id="5_oh724"]
[ext_resource type="PackedScene" uid="uid://c23cob2ektv23" path="res://source/User Interface/Dialogue/Dialogue.tscn" id="6_go20v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rpinu"]
radius = 0.257462
height = 0.759467

[sub_resource type="SphereShape3D" id="SphereShape3D_lt5u7"]
margin = 0.05
radius = 15.0

[sub_resource type="SphereShape3D" id="SphereShape3D_6kqrc"]
radius = 10.0

[sub_resource type="SphereShape3D" id="SphereShape3D_jpmyw"]
radius = 5.0

[sub_resource type="ViewportTexture" id="ViewportTexture_s85t5"]
viewport_path = NodePath("ProgressBar/SubViewport")

[node name="Mimi" type="CharacterBody3D"]
collision_layer = 32
motion_mode = 1
script = ExtResource("1_oq085")

[node name="MimiFSM" type="Node3D" parent="."]
script = ExtResource("2_wdrqt")

[node name="Mesh_Mimi" parent="." instance=ExtResource("1_mp811")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00921214, 0.333786, -0.0145681)
shape = SubResource("CapsuleShape3D_rpinu")

[node name="CameraArm" parent="." instance=ExtResource("3_fg4t1")]
margin = 1.0

[node name="WorldDetectors" type="Node3D" parent="."]

[node name="Facing" type="RayCast3D" parent="WorldDetectors"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0)
collision_mask = 2

[node name="Sight" type="Area3D" parent="WorldDetectors"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldDetectors/Sight"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_lt5u7")

[node name="Beckon" type="Area3D" parent="WorldDetectors"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldDetectors/Beckon"]
shape = SubResource("SphereShape3D_6kqrc")

[node name="Challenge" type="Area3D" parent="WorldDetectors"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldDetectors/Challenge"]
shape = SubResource("SphereShape3D_jpmyw")

[node name="GroundDetectors" type="Node3D" parent="WorldDetectors"]

[node name="F_GroundDetector" type="RayCast3D" parent="WorldDetectors/GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.150019, 0.5)
target_position = Vector3(0, -0.4, 0)

[node name="B_GroundDetector" type="RayCast3D" parent="WorldDetectors/GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, -0.5)
target_position = Vector3(0, -0.4, 0)

[node name="C_GroundDetector" type="RayCast3D" parent="WorldDetectors/GroundDetectors"]
target_position = Vector3(0, -0.25, 0)

[node name="L_GroundDetector" type="RayCast3D" parent="WorldDetectors/GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.15, 0)
target_position = Vector3(0, -0.4, 0)

[node name="R_GroundDetector" type="RayCast3D" parent="WorldDetectors/GroundDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.15, 0)
target_position = Vector3(0, -0.4, 0)

[node name="WallDetectors" type="Node3D" parent="WorldDetectors"]

[node name="F_WallDetector" type="RayCast3D" parent="WorldDetectors/WallDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0.5)
target_position = Vector3(0, 0, 0.25)

[node name="B_WallDetector" type="RayCast3D" parent="WorldDetectors/WallDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -0.5)
target_position = Vector3(0, 0, -0.25)

[node name="L_WallDetector" type="RayCast3D" parent="WorldDetectors/WallDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.75, 0)
target_position = Vector3(0.25, 0, 0)

[node name="R_WallDetector" type="RayCast3D" parent="WorldDetectors/WallDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.75, 0)
target_position = Vector3(-0.25, 0, 0)

[node name="LootOrigin" type="Marker3D" parent="WorldDetectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Outputs" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="StateOutput" type="Label3D" parent="Outputs"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
text = "State"

[node name="ProgressBar" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
offset = Vector2(0, 300)
billboard = 1
texture = SubResource("ViewportTexture_s85t5")

[node name="SubViewport" type="SubViewport" parent="ProgressBar"]
transparent_bg = true

[node name="ProgressBars" parent="ProgressBar/SubViewport" instance=ExtResource("5_oh724")]
visible = false

[node name="Dialogue" parent="ProgressBar/SubViewport" instance=ExtResource("6_go20v")]

[connection signal="body_entered" from="WorldDetectors/Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="WorldDetectors/Sight" to="." method="_on_sight_body_exited"]
[connection signal="area_entered" from="WorldDetectors/Beckon" to="." method="_on_beckon_area_entered"]
[connection signal="area_exited" from="WorldDetectors/Beckon" to="." method="_on_beckon_area_exited"]
[connection signal="area_entered" from="WorldDetectors/Challenge" to="." method="_on_challenge_area_entered"]
[connection signal="area_exited" from="WorldDetectors/Challenge" to="." method="_on_challenge_area_exited"]
